adding few things

--- a/electionproject/src/pages/test.css
+++ b/electionproject/src/pages/test.css
@@ -15,7 +15,7 @@
     color: #ffffff;
     animation: glow 2s infinite alternate;
 } 
-input[type=text],input[type=date],input[type=time],select, input[type=password]{
+input[type=text],input[type=date],input[type=time],select, input[type=password],input[type=email],input[type=number]{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
